<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_headline"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="@dimen/dimen_welcome_headline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_first_name"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_sign_up_first_name"
                    android:layout_marginStart="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_last_name"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_sign_up_last_name"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_login"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_sign_up_login"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_password"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_sign_up_password"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_tutor"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_is_tutor"
                android:checked="false"/>

            <FrameLayout
                android:id="@+id/fl_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_sign_up_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_sign_up_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </ScrollView>


</androidx.cardview.widget.CardView>