<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="70dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/search_headline"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/dimen_search_headline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_subject"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spinner_search_subject"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:entries="@array/subjects"
                android:gravity="end"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_max_hourly_fee"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_search_max_hourly_fee"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:hint="@string/search_max_hourly_fee"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_search_is_not_remote"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_is_not_remote"
            android:checked="false"/>

        <FrameLayout
            android:id="@+id/fl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_search_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>