<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="70dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp"
    tools:context=".authentication.presentation.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="@dimen/dimen_welcome_headline" />

            <Button
                android:id="@+id/btn_welcome_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_welcome_margin"
                android:onClick="onClick"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btn_welcome_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_welcome_margin"
                android:onClick="onClick"
                android:text="@string/sign_up" />

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>